# youtube-toolkit

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
site/: astro.config.mjs
site/src/content/docs/: index.mdx
site/src/styles/: custom.css
src/: __init__.py  analyzer.py  config.py  exporters.py  main.py  metrics.py  transcript.py
